--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,24 +7,24 @@
 // base - targets html tags
 @layer base {
   html {
-    font-family: "Quicksand", sans-serif;
+    //font-family: "Quicksand", sans-serif;
   }
   h1 {
-    @apply text-6xl font-bold pb-3;
+    //@apply text-6xl font-bold pb-3;
   }
   h2 {
-    @apply text-5xl font-bold pb-3;
+    //@apply text-5xl font-bold pb-3;
   }
   h3 {
-    @apply text-4xl font-bold pb-3;
+    //@apply text-4xl font-bold pb-3;
   }
   h4 {
-    @apply text-3xl font-bold pb-3;
+    //@apply text-3xl font-bold pb-3;
   }
   h5 {
-    @apply text-2xl font-bold pb-3;
+    //@apply text-2xl font-bold pb-3;
   }
   h6 {
-    @apply text-xl font-bold pb-3;
+    //@apply text-xl font-bold pb-3;
   }
 }
